<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/paddingMedium"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/buttonImage"
            android:layout_height="@dimen/buttonImage"
            android:layout_marginVertical="@dimen/marginMedium"
            android:src="@drawable/ic_asset_left"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="@dimen/marginNormal"
            android:textAppearance="@style/textAppearance.Heading1.Bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginStart="@dimen/marginNormal"
            android:layout_marginTop="@dimen/marginLarge"
            android:textAppearance="@style/textAppearance.Body2.Bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout.Rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginNormal"
            android:layout_marginTop="@dimen/marginNormal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_height"
                android:hint="@string/jhon_dae"
                android:inputType="textPersonName"
                android:padding="0dp"
                android:paddingStart="@dimen/paddingNormal"
                android:textAppearance="@style/textAppearance.Body2"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginStart="@dimen/marginNormal"
            android:layout_marginTop="@dimen/marginLarge"
            android:textAppearance="@style/textAppearance.Body2.Bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout.Rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginNormal"
            android:layout_marginTop="@dimen/marginNormal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_height"
                android:hint="jhondae@gmail.com"
                android:inputType="textEmailAddress"
                android:padding="0dp"
                android:paddingStart="@dimen/paddingNormal"
                android:textAppearance="@style/textAppearance.Body2"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginStart="@dimen/marginNormal"
            android:layout_marginTop="@dimen/marginLarge"
            android:textAppearance="@style/textAppearance.Body2.Bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout.Rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginNormal"
            android:layout_marginTop="@dimen/marginNormal"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_height"
                android:hint="@string/passwordstart"
                android:inputType="textPassword"
                android:padding="0dp"
                android:paddingStart="@dimen/paddingNormal"
                android:textAppearance="@style/textAppearance.Body2"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_confirm"
            android:layout_marginStart="@dimen/marginNormal"
            android:layout_marginTop="@dimen/marginLarge"
            android:textAppearance="@style/textAppearance.Body2.Bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout.Rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginNormal"
            android:layout_marginTop="@dimen/marginNormal"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_passwordconfirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_height"
                android:hint="@string/passwordstart"
                android:inputType="textPassword"
                android:padding="0dp"
                android:paddingStart="@dimen/paddingNormal"
                android:textAppearance="@style/textAppearance.Body2"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_height"
        android:layout_alignParentBottom="true"
        android:text="@string/register"/>

</RelativeLayout>